damn, all that fiddling and i forgot to check how the homepage looked. ugly. reverting. BUT i fixed an issue caused by a bug in chrome where there is a bunch of flickering due to using opacity transitions. chrome sucks. there, i said it. if FF actually fixed their CPU utilization issues i would use it full-time, but they cant.

--- a/css/main.less
+++ b/css/main.less
@@ -56,14 +56,16 @@ header {
 		li {
 			@tw-blue: #1b95e0;
 			@gp-red: #d62222;
-			a {display: block; padding: 12px; font-size: 12px; color: #ddd; letter-spacing: 0.08em; text-transform: uppercase;}
-			a, icon {transition: color 0.3s;}
-			a:hover {color: #fff;}
+			a {display: block; padding: 12px; font-size: 12px; letter-spacing: 0.08em; text-transform: uppercase;}
+			a, icon {color: #ddd; transition: color 0.3s;}
+			a:hover, icon:hover {color: #fff;}
 			&.highlight a {color: #eee;}
+			/*
 			&.twitter icon {color: lighten(@tw-blue, 10%);}
 			&.twitter:hover icon {color: @tw-blue;}
 			&.google-plus icon {color: lighten(@gp-red, 25%);}
 			&.google-plus:hover icon {color: lighten(@gp-red, 15%);}
+			*/
 		}
 	}
 
